# microservcarro/server/common/api.yml
@@ -64,7 +64,13 @@ paths:
       responses:
         200:
           description: Return all
-          content: {}          
+          content: {}
+  /clientes/event:
+    post:
+      responses:
+        200:
+          description: Return all
+          content: {}
   /examples:
     get:
       tags:
